--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,6 @@
 {
     "name": "GBA Scenic Route Env",
-    "build": {
-        "dockerfile": "Dockerfile"
-    },
+    "image": "ghcr.io/auberonedu/gba-scenic:0.2.0",
     "customizations": {
         "vscode": {
         "extensions": [
